--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Checkmate</h1>
-        <h2>cehckmate2</h2>
+        <h2>Web chess application based on GNUChess</h2>
 
         <section id="downloads">
           <a href="https://github.com/esrefozturk/checkmate/zipball/master" class="btn">Download as .zip</a>
