--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 <h2>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 
-<p><img src="/img/1.png" alt="1">
-<img src="/img/2.png" alt="2">
-<img src="/img/3.png" alt="3"></p>
+<p><img src="https://raw.githubusercontent.com/esrefozturk/checkmate/master/img/1.png" alt="1">
+<img src="https://raw.githubusercontent.com/esrefozturk/checkmate/master/img/2.png" alt="2">
+<img src="https://raw.githubusercontent.com/esrefozturk/checkmate/master/img/3.png" alt="3"></p>
 
 <p>Built with hugs and bugs in Ankara.</p>
       </section>
