Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="checkmate---web-chess-application-based-on-gnuchess" class="anchor" href="#checkmate---web-chess-application-based-on-gnuchess" aria-hidden="true"><span class="octicon octicon-link"></span></a>Checkmate - Web chess application based on GNUChess</h1>
+<a id="checkmate---web-chess-application-based-on-gnuchess" class="anchor" href="#checkmate---web-chess-application-based-on-gnuchess" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Checkmate - Web chess application based on GNUChess</h1>
 
 <h2>
-<a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description</h2>
+<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
 
 <p>It is a web application designed and developed during the 2014-2015 Fall Semester as project of <a href="http://www.ceng.metu.edu.tr/course/ceng498/">Software Development with Scripting Languages</a> course at Middle East Technical University. Pair Programming has been used as software development technique.
 <strong>Important:</strong> Our project works best with GNU Chess 6.1.2</p>
 
 <h2>
-<a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prerequisites</h2>
+<a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Prerequisites</h2>
 
 <p>Following packages must be installed:</p>
 
@@ -53,7 +53,7 @@
 </ul>
 
 <h2>
-<a id="how-to-run" class="anchor" href="#how-to-run" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run</h2>
+<a id="how-to-run" class="anchor" href="#how-to-run" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to run</h2>
 
 <p>Let’s proceed step by step:</p>
 
@@ -71,17 +71,17 @@
 </ul>
 
 <h2>
-<a id="where-to-get-help" class="anchor" href="#where-to-get-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where to get help</h2>
+<a id="where-to-get-help" class="anchor" href="#where-to-get-help" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Where to get help</h2>
 
 <p>If you want to try our project and something doesn’t go as expected, drop us a line at <a href="mailto:esref.ozturk@ceng.metu.edu.tr">esref.ozturk@ceng.metu.edu.tr</a> or <a href="mailto:ozge.lule@ceng.metu.edu.tr">ozge.lule@ceng.metu.edu.tr</a></p>
 
 <h2>
-<a id="contribution" class="anchor" href="#contribution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribution</h2>
+<a id="contribution" class="anchor" href="#contribution" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribution</h2>
 
 <p>We both love open source software and would like to see pull requests.</p>
 
 <h2>
-<a id="contributor-list" class="anchor" href="#contributor-list" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributor list</h2>
+<a id="contributor-list" class="anchor" href="#contributor-list" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributor list</h2>
 
 <ul>
 <li><a href="https://github.com/default-usr">Ozge</a></li>
@@ -89,16 +89,16 @@
 </ul>
 
 <h2>
-<a id="credits" class="anchor" href="#credits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Credits</h2>
+<a id="credits" class="anchor" href="#credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Credits</h2>
 
 <p>This project is as a fork of <a href="http://www.gnu.org/software/chess/">GNUChess</a>.</p>
 
 <h2>
-<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h2>
+<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h2>
 
-<p><img src="https://raw.githubusercontent.com/esrefozturk/checkmate/master/img/1.png" alt="1">
-<img src="https://raw.githubusercontent.com/esrefozturk/checkmate/master/img/2.png" alt="2">
-<img src="https://raw.githubusercontent.com/esrefozturk/checkmate/master/img/3.png" alt="3"></p>
+<p><img src="/img/1.png" alt="1">
+<img src="/img/2.png" alt="2">
+<img src="/img/3.png" alt="3"></p>
 
 <p>Built with hugs and bugs in Ankara.</p>
       </section>
