--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/esrefozturk/checkmate">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/CheckmateChess/CheckmateChess">View on GitHub</a>
 
           <h1 id="project_title">Checkmate</h1>
           <h2 id="project_tagline">Web chess application based on GNUChess</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/esrefozturk/checkmate/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/esrefozturk/checkmate/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/CheckmateChess/CheckmateChess/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/CheckmateChess/CheckmateChess/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -107,7 +107,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Checkmate maintained by <a href="https://github.com/esrefozturk">esrefozturk</a></p>
+        <p class="copyright">Checkmate maintained by <a href="https://github.com/CheckmateChess">CheckmateChess</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
