--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Checkmatechess : Web chess application based on GNUChess">
+    <meta name="description" content="Checkmate : Web chess application based on GNUChess">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Checkmatechess</title>
+    <title>Checkmate</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/CheckmateChess">View on GitHub</a>
 
-          <h1 id="project_title">Checkmatechess</h1>
+          <h1 id="project_title">Checkmate</h1>
           <h2 id="project_tagline">Web chess application based on GNUChess</h2>
 
         </header>
@@ -27,30 +27,76 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="checkmate---web-chess-application-based-on-gnuchess" class="anchor" href="#checkmate---web-chess-application-based-on-gnuchess" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Checkmate - Web chess application based on GNUChess</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h2>
+<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>It is a web application designed and developed during the 2014-2015 Fall Semester as project of <a href="http://www.ceng.metu.edu.tr/course/ceng498/">Software Development with Scripting Languages</a> course at Middle East Technical University. Pair Programming has been used as software development technique.
+<strong>Important:</strong> Our project works best with GNU Chess 6.1.2</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h2>
+<a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Prerequisites</h2>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>Following packages must be installed:</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>gnuchess : <code>sudo apt-get install gnuchess</code>
+</li>
+<li>django : <code>sudo apt-get install python-django</code>
+</li>
+</ul>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="how-to-run" class="anchor" href="#how-to-run" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to run</h2>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Let’s proceed step by step:</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<ul>
+<li>clone the repository using <code>git clone git@github.com:esrefozturk/checkmate.git</code>
+</li>
+<li>change directory using <code>cd checkmate</code>
+</li>
+<li>start CheckmateServer using <code>python CheckmateServer.py 0.0.0.0 20000</code>
+</li>
+<li>on another terminal change directory using <code>cd checkmate</code>
+</li>
+<li>start django web server using <code>python manage.py runserver</code>
+</li>
+</ul>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h2>
+<a id="where-to-get-help" class="anchor" href="#where-to-get-help" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Where to get help</h2>
+
+<p>If you want to try our project and something doesn’t go as expected, drop us a line at <a href="mailto:esref.ozturk@ceng.metu.edu.tr">esref.ozturk@ceng.metu.edu.tr</a> or <a href="mailto:ozge.lule@ceng.metu.edu.tr">ozge.lule@ceng.metu.edu.tr</a></p>
+
+<h2>
+<a id="contribution" class="anchor" href="#contribution" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contribution</h2>
+
+<p>We both love open source software and would like to see pull requests.</p>
+
+<h2>
+<a id="contributor-list" class="anchor" href="#contributor-list" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributor list</h2>
+
+<ul>
+<li><a href="https://github.com/default-usr">Ozge</a></li>
+<li><a href="https://github.com/esrefozturk">Esref</a></li>
+</ul>
+
+<h2>
+<a id="credits" class="anchor" href="#credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Credits</h2>
+
+<p>This project is as a fork of <a href="http://www.gnu.org/software/chess/">GNUChess</a>.</p>
+
+<h2>
+<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h2>
+
+<p><img src="/img/1.png" alt="1">
+<img src="/img/2.png" alt="2">
+<img src="/img/3.png" alt="3"></p>
+
+<p>Built with hugs and bugs in Ankara.</p>
       </section>
     </div>
 
