--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 <h2>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h2>
 
-<p><img src="/img/1.png" alt="1">
-<img src="/img/2.png" alt="2">
-<img src="/img/3.png" alt="3"></p>
+<p><img src="CheckmateChess.github.io/img/1.png" alt="1">
+<img src="CheckmateChess.github.io/img/2.png" alt="2">
+<img src="CheckmateChess.github.io/img/3.png" alt="3"></p>
 
 <p>Built with hugs and bugs in Ankara.</p>
       </section>
